--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -102,6 +102,7 @@
                     data-id="s{{ forloop.counter }}" 
                     onclick="openDescription(event)" 
                     onmouseover="stopSwitch()"
+                    onmouseleave="startSwitch()"
                 >
                     <div class="description">
                         <div class="title_block">
