--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -29,10 +29,10 @@
 
             <div class="decor"></div>
 
-            <div class="logo">
+            <a href="{% url 'home' %}" class="logo">
                 <img src="{% static 'main/images/logo.svg' %}" alt="">
                 <p>сверх ты</p>
-            </div>
+            </a>
 
             <nav>
                 <a href="" class="link">О нас</a>
