--- a/main/static/main/person_page/person_page.css
+++ b/main/static/main/person_page/person_page.css
@@ -106,6 +106,9 @@
 .person_top .navigation .main_element.air {
   transform: translateY(-50%) translateX(-70%) rotate(85deg) scaleX(-1);
 }
+.person_top .navigation .main_element.water {
+  transform: translateY(-50%) translateX(-70%) rotate(-90deg) scaleX(-1);
+}
 @media screen and (max-width: 1450px) {
   .person_top .navigation .main_element {
     width: 350px;
@@ -1004,7 +1007,7 @@
   .svirina_bottom .container {
     padding-top: 0px;
     margin-top: 80px;
-    margin-bottom: 800px;
+    margin-bottom: 100px;
   }
 }
 .svirina_bottom .container .bird_block {
@@ -1302,6 +1305,7 @@
   justify-content: space-between;
   gap: 38px 25px;
   grid-template-rows: 192px auto;
+  margin-bottom: 100px;
 }
 @media screen and (max-width: 640px) {
   .komarova_bottom {
